# LabRobotica20221

lab1/: CMakeLists.txt  package.xml
lab1/config/: sawyer.rviz
lab1/launch/: display_sawyer.launch  display_sawyer_sliders.launch  robot.launch  robot_gazebo.launch  robot_gazebo_control.launch  robotx.launch
lab2/: CMakeLists.txt  package.xml
lab2/launch/: display_sawyer.launch  display_sawyer_sliders.launch
lab2/src/: node_hello.py  node_joints.py  node_joints_interpol.py
