<?xml version="1.0"?>
<package format="2">
  <name>lab1</name>
  <version>0.0.0</version>
  <description>Paquete para el laboratorio 1</description>

  <maintainer email="andrenanper@todo.todo">andrenanper</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
</package>
